<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/TitleLogin"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="User Name" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="Password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp">

        <CheckBox
            android:id="@+id/ckbPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Check"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/btnLogin"
            android:background="#F12B0C"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/btnRegister"
            android:background="#666666"
            android:textColor="#ffffff"/>

    </LinearLayout>

</LinearLayout>