<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/TitleRegistration"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="UserName" />

    <EditText
        android:id="@+id/edtPassWord"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="Password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edtConfirm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="Confirm Pasword"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="25dp"
            android:text="@string/btnRegistration"
            android:background="#F12B0C"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:layout_marginTop="25dp"
            android:text="@string/btnCancel"
            android:background="#6F6968"
            android:textColor="#ffffff"/>
    </LinearLayout>

</LinearLayout>